# Learning-Color-Equivariant-Representations

./: LICENSE  README.md  constants.py  default_params.json  lightning_model.py  pyproject.toml  show_model_info.py  test_color_equivariance.py  train_mGPU.py  train_sGPU.py
datasets/: custom_datasets.py  dataloaders.py
experiments/: cifar.json  oxford_pets.json  stanford_cars.json
hsgroup/: hsgconv.py  transforms.py
networks/: networks.py  resnet.py  simple_network.py
utils/: train_utils.py
