[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-color-equivariant-representations"
version = "0.1.0"
description = "Learning Color Equivariant Representations for Computer Vision"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "torch>=1.9.0",
  "torchvision>=0.10.0",
  "lightning>=2.0.0",
  "numpy>=1.21.0",
  "Pillow>=8.3.0",
  "h5py>=3.1.0",
  "pyarrow>=5.0.0",
  "click>=8.0.0",
  "wilds>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ceconv", "datasets", "hsgroup", "networks", "utils"]